# newline

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/newline/: byte_seq.h  defs.h  detector.hpp  getline.hpp  newline.h  newline.hpp  newline_defs.h  utf16_seq.h  utf32_seq.h  utf8_seq.h  wide_seq.h
include/util/: getline.hpp
test/: detector_test.cpp  getline_test.cpp  test_defs.hpp
